[package]
name = "huey"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "Neovim lua color scheme generator written in Rust."
homepage = "https://github.com/oahlen/huey"
categories = ["command-line-utilities"]
keywords = ["neovim", "nvim", "colorscheme"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
indexmap = "2.12.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = { version = "0.9.8", features = ["preserve_order"] }
